--- a/resources/enet-1.3.17/ChangeLog
+++ b/resources/enet-1.3.17/ChangeLog
@@ -68,7 +68,7 @@ ENet 1.3.7 (March 6, 2013):
 ENet 1.3.6 (December 11, 2012):
 
 * added support for intercept callback in ENetHost that can be used to process raw packets before ENet
-* added enet_socket_shutdown() for issuing shutdown on a socket
+* added enet_socket_shutdown() for issuing shutDown on a socket
 * fixed enet_socket_connect() to not error on non-blocking connects
 * fixed bug in MTU negotiation during connections
  
